--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
 reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
+unstd = "0.1.0"
+yyid = "0.6.0"
