--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,9 @@ opt-level = 3
 opt-level = 3
 
 [dependencies]
-aoc_proc_macros = { path = "./aoc_proc_macros" }
-beef = { version = "0.5.2" }
+aom = { path = "./aom" }
+
+# beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
 reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
