--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,9 @@ aom = { path = "./aom" }
 
 # beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
-reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
+fs-err = { version = "2.9.0", features = ["io_safety"] }
+include_dir = "0.7.3"
+reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
 unstd = "0.1.0"
 yyid = "0.6.0"
