Optimize in-memory file data handling
For regular (non-example) runs, the input data is borrowed from the
in-memory saved files.
Also the input is not pre-split in lines anymore.
Each day has to choose how to properly parse the input data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ opt-level = 3
 [dependencies]
 aom = { path = "./aom" }
 
-# beef = { version = "0.5.2" }
+beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
 fs-err = { version = "2.9.0", features = ["io_safety"] }
 include_dir = "0.7.3"
