--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
 fs-err = { version = "2.9.0", features = ["io_safety"] }
 include_dir = "0.7.3"
-reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking", "cookie_store", "cookies", "gzip"] }
+reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "trust-dns", "blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
 unstd = "0.1.0"
 yyid = "0.6.0"
