--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ aom = { path = "./aom" }
 
 beef = { version = "0.5.2" }
 clap = { version = "4.0.29", features = ["derive"] }
+color-eyre = "0.6.2"
 fs-err = { version = "2.9.0", features = ["io_safety"] }
 include_dir = "0.7.3"
 reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "trust-dns", "blocking", "cookie_store", "cookies", "gzip"] }
