Add day 4 solution
It's pretty efficient already.

Note: I also tried to use ranges, but they are more expensive,
therefore checking only starts and ends with each other is best.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -13,6 +13,7 @@ d0 = "run --bin day0"
 d1 = "run --bin day1"
 d2 = "run --bin day2"
 d3 = "run --bin day3"
+d4 = "run --bin day4"
 
 [env]
 HELLO = { value = "world" }
