--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -14,6 +14,7 @@ d1 = "run --bin day1"
 d2 = "run --bin day2"
 d3 = "run --bin day3"
 d4 = "run --bin day4"
+d5 = "run --bin day5"
 
 [env]
 HELLO = { value = "world" }
