--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ opt-level = 3
 opt-level = 3
 
 [dependencies]
+ahash = { version = "0.8.2", features = ["compile-time-rng"] }
 aom = { path = "./aom" }
 
 beef = { version = "0.5.2" }
