--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ opt-level = 3
 lto = true
 codegen-units = 1
 incremental = true
+panic = "abort"
 
 # https://doc.rust-lang.org/cargo/reference/profiles.html#custom-profiles
 [profile.release-strip]
