--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ color-eyre = "0.6.2"
 compact_str = "0.6.1"
 fs-err = { version = "2.9.0", features = ["io_safety"] }
 include_dir = "0.7.3"
+pathfinding = "4.0.0"
 reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "trust-dns", "blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
 tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }
