--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,8 @@ include_dir = "0.7.3"
 pathfinding = "4.0.0"
 reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "trust-dns", "blocking", "cookie_store", "cookies", "gzip"] }
 rpmalloc = { version = "0.2.2", features = ["unlimited_cache", "global_cache", "thread_cache", "adaptive_thread_cache"] }
+serde = { version = "1.0.150", features = ["derive", "rc"] }
+serde_json = "1.0.89"
 tinyvec = { version = "1.6.0", features = ["rustc_1_57", "std"] }
 unstd = "0.1.0"
 yyid = "0.7.0"
